--- a/app/src/views/style.css
+++ b/app/src/views/style.css
@@ -1,1 +1,151 @@
 /** @format */
+
+:root {
+    --main-bg-color: #51D3E7;
+    --main-font-color: #FFFFFF;
+    --border-color: #C5F6FA;
+    --visited-bg-color: #E3FAFC;
+}
+
+html {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 296px;
+    height: 30px;
+    color: var(--main-font-color);
+}
+
+ul {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: flex-start;
+    margin: 0;
+    padding: 0;
+    padding-inline-start: 0;
+}
+
+button {
+    border: none;
+    border-radius: 4px;
+    background-color: var(--main-bg-color);
+    color: var(--main-font-color);
+}
+
+input {
+    border: none;
+}
+
+form {
+    /* 수정할 때 길이 맞추기 용.. */
+    margin-left: 30px;
+}
+
+.todo-box {
+    width:512px;
+    height:241px;
+    margin-top: 64px;
+}
+
+.todo-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--main-bg-color);
+    width: 512px;
+    height: 110px;
+}
+
+/* .todo-form-ul { */
+    /* display:flex; */
+    /* flex-flow: row wrap; */
+    /* justify-content: flex-start;  */
+    /* width: 100%; */
+    /* height: 100%; sibal 이거 때문에 list가 중간에 생겼던 것이다 */
+    /* margin: 0px; 클래스에하니 안됨 */
+/* } */
+
+.todo-form {
+    border-bottom: 2px solid var(--main-bg-color);
+}
+
+.todo-input {
+    box-sizing: border-box;
+    margin: 13px;
+    width: 400px;
+    height: 36px;
+    border-bottom: 1px solid var(--border-color);
+}
+
+.input-btn {
+    width: 60px;
+    height: 36px;
+    border: none;
+}
+
+.edit-btn {
+    width: 40px;
+    height: 24px;
+}
+
+.todo-list-box {
+    width:100%;
+    padding-left: 0;
+    list-style: none;
+}
+
+.todo-list-box li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 472px;
+    height: 60px;
+}
+
+
+.todo-form {
+    margin: 10px;
+}
+
+.todo-span {
+    width: 390px;
+    height: 18px
+}
+
+.edit-input {
+    /* box-sizing: border-box; */
+    width: 390px;
+    height: 18px;
+}
+
+.delete-btn {
+    visibility: hidden;
+    background-color: rgba(0,0,0,0);
+}
+
+.visited {
+    text-decoration: line-through;
+    color: grey;
+}
+
+.todo-list:hover {
+    background-color: var(--visited-bg-color);
+    
+}
+
+.todo-list:hover > .delete-btn {
+    visibility: visible;
+}
+
